--- a/osu-launcher.csproj
+++ b/osu-launcher.csproj
@@ -120,30 +120,39 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Main.cs">
+    <Compile Include="Forms\EditSoftware.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Main.Designer.cs">
+    <Compile Include="Forms\EditSoftware.Designer.cs">
+      <DependentUpon>EditSoftware.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
-    <Compile Include="PasswordManager.cs" />
+    <Compile Include="Classes\PasswordManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AddSoftware.cs">
+    <Compile Include="Forms\AddSoftware.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddSoftware.Designer.cs">
+    <Compile Include="Forms\AddSoftware.Designer.cs">
       <DependentUpon>AddSoftware.cs</DependentUpon>
     </Compile>
-    <Compile Include="Software.cs" />
-    <Compile Include="User.cs" />
-    <Compile Include="UserForm.cs">
+    <Compile Include="Classes\Software.cs" />
+    <Compile Include="Classes\User.cs" />
+    <Compile Include="Forms\ProfileForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UserForm.Designer.cs">
-      <DependentUpon>UserForm.cs</DependentUpon>
+    <Compile Include="Forms\ProfileForm.Designer.cs">
+      <DependentUpon>ProfileForm.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Main.resx">
+    <EmbeddedResource Include="Forms\EditSoftware.resx">
+      <DependentUpon>EditSoftware.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -155,11 +164,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AddSoftware.resx">
+    <EmbeddedResource Include="Forms\AddSoftware.resx">
       <DependentUpon>AddSoftware.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserForm.resx">
-      <DependentUpon>UserForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\ProfileForm.resx">
+      <DependentUpon>ProfileForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -190,6 +199,7 @@
   <ItemGroup>
     <Content Include="icon.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
