--- a/osu-launcher.csproj
+++ b/osu-launcher.csproj
@@ -133,6 +133,7 @@
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\PasswordManager.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\AddSoftware.cs">
